--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +27,26 @@
         <activity android:name=".activity.TwoColorBallActivity"></activity>
 
         <activity android:name=".activity.SSQHistoryActivity"></activity>
+
+        <activity android:name=".activity.DemoActivity">
+            <intent-filter>
+                <action android:name="demo"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".demo.activity.AddContacts">
+
+        </activity>
+
+        <activity android:name=".demo.activity.TestRecycler">
+            <intent-filter>
+                <action android:name="testRecycler"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".demo.activity.SampleActivity"></activity>
         <provider
             android:authorities="com.stuart.stuartapp"
             android:name=".db.StuartProvider"/>
