--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
     compileSdkVersion 24
@@ -21,21 +24,24 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+            //java.srcDirs = ['src/main/kotlin']
         }
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile files('libs/RxAndroid.jar')
     compile files('libs/xUtils-2.6.14.jar')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
     compile files('libs/Baidu-SpeechRecognitionUI-SDK-Android-1.6.2.jar')
     compile files('libs/com.baidu.android.localasr_1.1.22.jar')
     compile files('libs/com.baidu.speechsynthesizer_1.1.2.jar')
     compile files('libs/galaxy.jar')
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile 'junit:junit:4.12'
 }
