--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,43 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.stuart.stuartapp">
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-
-    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
-
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.baidu.speech.APP_ID" android:value="9601898" />
-        <meta-data android:name="com.baidu.speech.API_KEY" android:value="02qsoV3AIvYqH2hEkmLvWblE" />
-        <meta-data android:name="com.baidu.speech.SECRET_KEY" android:value="172a23b02564d514baa7cade4cd2b708" />
-
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="9601898" />
+        <meta-data
+            android:name="com.baidu.speech.API_KEY"
+            android:value="02qsoV3AIvYqH2hEkmLvWblE" />
+        <meta-data
+            android:name="com.baidu.speech.SECRET_KEY"
+            android:value="172a23b02564d514baa7cade4cd2b708" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -47,62 +40,83 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.TwoColorBallActivity"></activity>
-
-        <activity android:name=".activity.SSQHistoryActivity"></activity>
-
+        <activity android:name=".activity.TwoColorBallActivity" />
+        <activity android:name=".activity.SSQHistoryActivity" />
         <activity android:name=".activity.DemoActivity">
             <intent-filter>
-                <action android:name="demo"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
+                <action android:name="demo" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".demo.activity.AddContacts">
-
-        </activity>
-
+        <activity android:name=".demo.activity.AddContacts"></activity>
         <activity android:name=".demo.activity.TestRecycler">
             <intent-filter>
-                <action android:name="testRecycler"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
+                <action android:name="testRecycler" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity android:name=".weather.WeatherActivity">
-           <!-- <intent-filter>
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+            <intent-filter>
+                <action android:name="com.stuart.weather" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".weather.SelectCity">
+            <intent-filter>
+                <action android:name="com.stuart.add_weather_city" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".demo.activity.SampleActivity" />
+
+        <provider
+            android:name=".db.StuartProvider"
+            android:authorities="com.stuart.stuartapp" />
+        <provider
+            android:name=".weather.db.WeatherProvider"
+            android:authorities="com.stuart.stuartapp.weather" />
+
+        <activity android:name=".boy.MyBoy">
+            <intent-filter>
+                <action android:name="com.stuart.boy" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.KotlinActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+         <!--   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>-->
             <intent-filter>
-
-                <action android:name="com.stuart.weather"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".weather.SelectCity">
-            <intent-filter>
-                <action android:name="com.stuart.add_weather_city"></action>
                 <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="kotlin"></action>
             </intent-filter>
         </activity>
 
-        <activity android:name=".demo.activity.SampleActivity"></activity>
-        <provider
-            android:authorities="com.stuart.stuartapp"
-            android:name=".db.StuartProvider"/>
-
-        <provider
-            android:authorities="com.stuart.stuartapp.weather"
-            android:name=".weather.db.WeatherProvider"/>
-
-        <activity android:name="com.stuart.stuartapp.boy.MyBoy">
+        <activity android:name=".kotlin.PullActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="com.stuart.boy"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="com.stuart.pull.kotlin"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
