--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile files('libs/com.baidu.android.localasr_1.1.22.jar')
     compile files('libs/com.baidu.speechsynthesizer_1.1.2.jar')
     compile files('libs/galaxy.jar')
+    compile 'com.android.support:percent:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
@@ -46,4 +47,5 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile 'junit:junit:4.12'
     compile files('libs/picasso-2.5.2.jar')
+    compile files('libs/BaiduLBS_Android.jar')
 }
