--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
             jniLibs.srcDirs = ['libs']
             java.srcDirs = ['src/main/java', 'src/main/aidl']
             //java.srcDirs = ['src/main/kotlin']
+            res.srcDirs = ['src/main/res', 'src/main/res/xml']
         }
     }
 }
