--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
 
     <uses-permission android:name="android.permission.GET_TASKS" />
 
+    <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE"/>
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -200,6 +202,21 @@
         </service>
 
         <service android:name=".service.FileLogService" />
+
+
+        <service android:name=".service.MyAccessibility"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility"/>
+
+        </service>
     </application>
 
 </manifest>
