--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.stuart.stuartapp"
@@ -32,26 +32,26 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile files('libs/xUtils-2.6.14.jar')
-    compile files('libs/Baidu-SpeechRecognitionUI-SDK-Android-1.6.2.jar')
-    compile files('libs/com.baidu.android.localasr_1.1.22.jar')
-    compile files('libs/com.baidu.speechsynthesizer_1.1.2.jar')
-    compile files('libs/galaxy.jar')
-    compile 'com.android.support:percent:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:+'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testCompile 'junit:junit:4.12'
-    compile files('libs/picasso-2.5.2.jar')
-    compile files('libs/BaiduLBS_Android.jar')
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile files('libs/adapter-rxjava2-2.3.0.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation files('libs/xUtils-2.6.14.jar')
+    implementation files('libs/Baidu-SpeechRecognitionUI-SDK-Android-1.6.2.jar')
+    implementation files('libs/com.baidu.android.localasr_1.1.22.jar')
+    implementation files('libs/com.baidu.speechsynthesizer_1.1.2.jar')
+    implementation files('libs/galaxy.jar')
+    implementation 'com.android.support:percent:24.2.1'
+    implementation 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'com.android.support:recyclerview-v7:24.2.1'
+    implementation 'com.android.support:cardview-v7:24.2.1'
+    implementation 'com.android.support:design:24.2.1'
+    implementation 'com.android.support.constraint:constraint-layout:+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    implementation files('libs/picasso-2.5.2.jar')
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation files('libs/adapter-rxjava2-2.3.0.jar')
     //    complie 'io.reactivex.rxjava2:rxjava:2.0.1'
     implementation project(':rxandroid2')
     implementation files('libs/RxAndroid.jar')
@@ -59,7 +59,7 @@ dependencies {
 }
 
 dependencies {
-    compile project(':rxandroid2')
-    compile project(':zxlibs')
+    implementation project(':rxandroid2')
+    implementation project(':zxlibs')
 
 }
