--- a/rxandroid/build.gradle
+++ b/rxandroid/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 16
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         minSdkVersion 11
         versionCode 1
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    api 'io.reactivex.rxjava2:rxjava:2.0.1'
 
 
 }
