--- a/zxlibs/build.gradle
+++ b/zxlibs/build.gradle
@@ -1,20 +1,22 @@
 buildscript {
     repositories {
         jcenter()
+      google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation files('libs/core-3.2.1.jar')
 }
 
 android {
     compileSdkVersion 20
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -33,7 +35,7 @@ android {
         }
 
         // Move the tests to tests/java, tests/res, etc...
-        instrumentTest.setRoot('tests')
+        androidTest.setRoot('tests')
 
         // Move the build types to build-types/<type>
         // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
